# LLM-Engine

./: .gitignore  CMakeLists.txt  README.md
cmake/: MacOSBundle.cmake
docs/: index.html
include/core/: gguf_parser.h  kv_cache.h  model.h  sampler.h  simd_math.h  thread_pool.h  tokenizer.h
include/ui/: app.h
scripts/: capture_desktop_screenshot.m  capture_desktop_screenshot.sh  cli_test.cpp  dump_gguf.cpp  find_eot_tokens.cpp  thorough_test.cpp  validate_dequant.py
src/core/: gguf_parser.cpp  kv_cache.cpp  model.cpp  sampler.cpp  simd_math.cpp  thread_pool.cpp  tokenizer.cpp
src/ui/: app.cpp  main.cpp
tests/: CMakeLists.txt  test_kv_cache.cpp  test_sampler.cpp  test_simd_math.cpp  test_tokenizer.cpp
